# TaskTracker

./: .gitignore  CMakeLists.txt  README.md
include/: Task.hpp  TaskTracker.hpp
src/: Task.cpp  TaskTracker.cpp  main.cpp
